<resources>
    <string name="app_name">Location Tracker</string>
    <string name="userId">Enter UserId</string>
    <string name="stopTracker">Stop Tracker</string>
    <string name="submitTracker"><![CDATA[Submit & Start Tracker]]></string>
    <string name="startTracker">Start Tracker</string>
    <string name="currentUserId">"Current UserId is : "</string>
    <string name="enterId">Kindly enter UserId</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="app_running">App is using location services</string>
    <string name="shiftIn">Shift In</string>
    <string name="shiftOut">Shift Out</string>
    <string name="logIn">Log In</string>
    <string name="logOut">Log Out</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="error">Unknown error</string>
    <string name="tripId">Trip Id</string>
    <string name="travel_status">Travel Status</string>
    <string name="login"><![CDATA[Please Enter UserId & Continue]]></string>
    <string name="changeShift">Please change shift</string>
    <string name="out">OUT</string>
    <string name="IN">IN</string>
    <string name="device_type">Device Type</string>
    <string name="one">1</string>

</resources>