<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/et_user_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp50"
        android:layout_marginTop="@dimen/dp200"
        android:hint="@string/userId"
        android:inputType="number"
        android:maxLines="1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp200"
        android:maxLines="1"
        android:padding="@dimen/dp10"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="123456" />

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp100"
        android:paddingVertical="@dimen/dp10"
        android:text="@string/startTracker"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:paddingVertical="@dimen/dp10"
        android:text="@string/stopTracker"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/start"
        app:layout_constraintStart_toStartOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/start" />

    <Button
        android:id="@+id/btnShiftInOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:paddingVertical="@dimen/dp10"
        android:text="@string/shiftIn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/stop"
        app:layout_constraintStart_toStartOf="@id/stop"
        app:layout_constraintTop_toBottomOf="@id/stop" />

    <Button
        android:id="@+id/btnLogInOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:paddingVertical="@dimen/dp10"
        android:text="@string/logIn"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/stop"
        app:layout_constraintStart_toStartOf="@id/stop"
        app:layout_constraintTop_toBottomOf="@id/btnShiftInOut" />

</androidx.constraintlayout.widget.ConstraintLayout>